# llms-expose-science-claude

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.idea-explorer/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: .gitignore  README.md
logs/: execution_claude_transcript.jsonl  research_prompt.txt  resource_finder_claude_transcript.jsonl  resource_finder_prompt.txt  session_instructions.txt
papers/: README.md
results/: experiment_results.json  model_comparison.json  topic_scores.csv
src/: experiment.py  model_comparison.py
