[project]
name = "research-workspace"
version = "0.1.0"
description = "Research workspace for LLM gap detection experiments"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.4.1",
    "httpx>=0.28.1",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "openai>=2.11.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
